tests/golden/err-caret-at-dot/expected_error.txt
error: `^@` のパス `.` が不正です
 --> ./_.clum:1:3
  |
1 | ^@.
  |   ^ 出どころを明示します（`^@./ファイル名` か `^@./サブディレクトリ`）
